--- a/budgiet-express-app/package.json
+++ b/budgiet-express-app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -r dotenv/config server.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -13,6 +13,11 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "pg": "^8.9.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20"
   }
 }
